--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
-# command to install dependencies
+matrix:
+  allow_failures:
+    - python: "3.2"
 install: "pip install -r requirements.txt"
-# command to run tests
 script: python tests.py
