rename config folder

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,4 +1,7 @@
-upstream sh_gunicorn {
+#
+# NGINX configuration to expose skilled hammer webui
+
+upstream skilled_hammer {
     # fail_timeout=0 means we always retry an upstream even if it failed
     # to return a good HTTP response
     # for UNIX domain socket setups
@@ -6,7 +9,7 @@ upstream sh_gunicorn {
 }
 
 server {
-    listen 80;
+    listen *:80 default_server;
     server_name sh.somewhere.org;
 
     location / {
@@ -22,6 +25,6 @@ server {
         # we don't want nginx trying to do something clever with
         # redirects, we set the Host: header above already.
         proxy_redirect off;
-        proxy_pass http://sh_gunicorn;
+        proxy_pass http://skilled_hammer;
     }
 }
