--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 #
-# NGINX configuration to expose skilled hammer webui
+# NGINX configuration to expose skilled hammer to the www
 
 upstream skilled_hammer {
     # fail_timeout=0 means we always retry an upstream even if it failed
