--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+mock==2.0.0
+pbr==1.10.0
+six==1.10.0
 smmap==0.9.0
 Werkzeug==0.11.11
