--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 cache: pip
 python:
   - "2.7"
-  - "3.5"
+  - "3.6"
 install: "pip install -r requirements.txt"
-script: python tests.py
+script: python skilled_hammer/tests.py
