delete unused configuration files

--- a/repositories.conf
+++ b/repositories.conf
@@ -1,4 +1,4 @@
 [vigilant-octo]
 origin = https://github.com/r00m/vigilant-octo
 directory = /var/www/vigilant-octo.org
-command = supervisorctl restart vigilant-octo
+command = compass compile
