--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
 script:
-  - coverage run python test
+  - coverage run tests.py
 after_success:
   - coveralls
